# store_management_mcp

./: .env.example  .gitignore  DASHBOARD_STATUS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.aggregation  Dockerfile.collection  Dockerfile.dashboard  LICENSE  PROJECT_STATUS.md  README.md  README_MCP_SERVERS.md  azure.yaml  azure_deployment_example.bicep  mcp.json  pyproject.toml  setup_github.ps1  setup_github.sh  start_dashboard.bat  start_dashboard.py  start_streamlit.bat  temp_service_account.json
.github/: copilot-instructions.md
config/: config.yaml
config/schemas/: exec_snapshot.json  store_insights.json
dashboard/: README.md  app.py
data/: mock_qna.json  mock_qna_extended.json  mock_reviews.json  mock_reviews_extended.json  mock_store_info.json  mock_store_info_extended.json  question_categories.json  williams_sonoma_qna.json  williams_sonoma_reviews.json  williams_sonoma_stores.json
data/processed/: .gitkeep
data/snapshots/: .gitkeep
infra/: main.bicep  main.parameters.json
scripts/: demo.py  run_dashboard.py  start.bat  start.py  start.sh  store_coordinates.py  update_store_coordinates.py  update_store_data.py
src/google_business_analytics/: __init__.py
src/google_business_analytics/aggregation_agent/: __init__.py  aggregator.py  server.py
src/google_business_analytics/collection_agent/: __init__.py  data_processor.py  google_api_client.py  server.py
src/google_business_analytics/shared/: __init__.py  azure_openai_service.py  config.py  schemas.py
tests/: conftest.py  test_aggregator.py  test_config.py  test_data_processor.py
